Expand Face Set symmetry is broken #74501

Closed
opened 2020-03-06 16:16:41 +01:00 by Frozen_Death_Knight · 4 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 980/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.50

Blender Version
Broken: version: 2.83 (sub 6), branch: master, commit date: 2020-03-06 10:05, hash: 7d9a5b7b10
Worked: (optional)

Short description of error
The Expand Face Set command creates asymmetrical selections when having symmetry activated. To fix they you need to use Symmetrize, which isn't very ideal.

Exact steps for others to reproduce the error
As you can see in the video below, using Expand Face Set do not produce symmetry, i.e. on the x-axis. The side where you paint on is smaller by one whole face compared to the other side.

Desktop 2020.03.06 - 15.38.00.03.mp4

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 980/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.50 **Blender Version** Broken: version: 2.83 (sub 6), branch: master, commit date: 2020-03-06 10:05, hash: `7d9a5b7b10` Worked: (optional) **Short description of error** The Expand Face Set command creates asymmetrical selections when having symmetry activated. To fix they you need to use Symmetrize, which isn't very ideal. **Exact steps for others to reproduce the error** As you can see in the video below, using Expand Face Set do not produce symmetry, i.e. on the x-axis. The side where you paint on is smaller by one whole face compared to the other side. [Desktop 2020.03.06 - 15.38.00.03.mp4](https://archive.blender.org/developer/F8391908/Desktop_2020.03.06_-_15.38.00.03.mp4)

Added subscriber: @Frozen_Death_Knight

Added subscriber: @Frozen_Death_Knight
Pablo Dobarro self-assigned this 2020-03-06 16:19:10 +01:00

This issue was referenced by db1d711458

This issue was referenced by db1d7114581381e68d00cb173d093216c61d7ec6

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#74501
No description provided.